# ska-jama-jira-integration

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
src/ska_jama_jira_integration/: config.py  main.py
src/ska_jama_jira_integration/jama/: api_interface.py  jama.py  lookup_fields.yaml  service.py  transformers.py
src/ska_jama_jira_integration/jira/: api_interface.py  jira.py  service.py
src/ska_jama_jira_integration/models/: field_mapping.py  field_mapping.yaml  models.py
src/ska_jama_jira_integration/services/: synchronize.py
tests/integration/: test_integration.py
tests/unit/: test_jama.py  test_jira.py  test_main.py
