[tool.poetry]
include = ["MANIFEST.skao.int"]
name = "ska-jama-jira-integration"
version = "0.1.0"
description = ""
authors = ["Brendon_Taljaard <Brendon.Taljaard@skao.int>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
bs4 = "^0.0.2"
xlsxwriter = "^3.2.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
pylint = "^3.3.1"
pylint-junit = "^0.3.4"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
build = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
